--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <img src="images/image-product-desktop.jpg" alt="">
+        <img src="images/image-product-desktop.jpg" alt="Chanel">
         <div>
             <span>Perfume</span>
             <h1>Gabrielle Essence Eau De Parfum</h1>
