--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             <h1>Gabrielle Essence Eau De Parfum</h1>
             <p>A floral, solar and voluptuous interpretations composed by Oliver Polge, Perfume-Creator for the house of CHANEL.</p>
             <div>
-                <h2>149.99</h2>
-                <p>169.99</p>
+                <h2>$ 149.99</h2>
+                <p> $ 169.99</p>
             </div>
-            <button><img src="/images/icon-cart.svg" alt="">Add to cart</button>
+            <button>
+                <img src="/images/icon-cart.svg" alt="cart">
+                Add to cart
+            </button>
         </div>
     </section>
 </body>
