Nombre de perfume en mayuscula

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <img src="images/image-product-desktop.jpg" alt="Chanel">
         <div>
-            <span>Perfume</span>
+            <span>PERFUME</span>
             <h1>Gabrielle Essence Eau De Parfum</h1>
             <p>A floral, solar and voluptuous interpretations composed by Oliver Polge, Perfume-Creator for the house of CHANEL.</p>
             <div>
